--- a/bytebuddy-troubleshoot/src/main/resources/application.properties
+++ b/bytebuddy-troubleshoot/src/main/resources/application.properties
@@ -24,4 +24,29 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 # Initialize SQL using Spring's sql init if you add schema.sql/data.sql files
 spring.sql.init.mode=never
 
-server.port= 8083
+server.port=8083
+
+spring.jpa.transaction-type=RESOURCE_LOCAL
+spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
+
+#spring.jpa.properties.hibernate.transaction.jta.platform=com.atomikos.icatch.jta.hibernate5.AtomikosJtaPlatform
+#org.springframework.boot:spring-boot-starter-jta-atomikos
+
+spring.jpa.open-in-view=false
+
+# CRITICAL for GraalVM native images
+spring.jpa.properties.hibernate.bytecode.provider=none
+spring.jpa.properties.hibernate.bytecode.enhancer.enable-dirty-tracking=false
+spring.jpa.properties.hibernate.bytecode.enhancer.enable-lazy-initialization=false
+spring.jpa.properties.hibernate.bytecode.enhancer.enable-association-management=false
+
+# Alternative: Use no enhancement at all
+spring.jpa.properties.hibernate.enhancer.enableDirtyTracking=false
+spring.jpa.properties.hibernate.enhancer.enableLazyInitialization=false
+spring.jpa.properties.hibernate.enhancer.enableAssociationManagement=falsee
+
+logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate.bytecode=TRACE
+
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.session_factory.statement_inspector=prot.graalvm.tr.tools.DebugInterceptor
