add 2 datasources: account and client
it works for java and native build/execute

--- a/bytebuddy-troubleshoot/src/main/resources/application.properties
+++ b/bytebuddy-troubleshoot/src/main/resources/application.properties
@@ -2,32 +2,54 @@ spring.application.name=bytebuddy-troubleshoot
 
 # DataSource (connect to the docker-compose service name `sqlserver` when the app runs alongside the container)
 # DataSource URL (DB_HOST defaults to localhost so running the jar on the host will connect to the mapped port)
-spring.datasource.url=jdbc:sqlserver://${DB_HOST:localhost}:1433;databaseName=master;encrypt=false;sendStringParametersAsUnicode=true
-spring.datasource.username=sa
-spring.datasource.password=verYs3cret
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+account.datasource.jdbc-url=jdbc:sqlserver://${DB_HOST:localhost}:1433;databaseName=accounts;encrypt=false;sendStringParametersAsUnicode=true
+account.datasource.username=sa
+account.datasource.password=verYs3cret
+account.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# HikariCP settings (defaults are fine; tuned for dev)
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.pool-name=HikariPool
+account.datasource.maximum-pool-size=10
+account.datasource.minimum-idle=2
+account.datasource.connection-timeout=30000
+account.datasource.max-lifetime=1800000
+account.datasource.idle-timeout=600000
+account.datasource.pool-name=AccountPool
+
+account.jpa.hibernate.hbm2ddl.auto=create
+account.jpa.hibernate.ddl-auto=create
+account.jpa.hibernate.show-sql=true
+account.jpa.hibernate.format_sql=true
+
+client.datasource.jdbc-url=jdbc:sqlserver://${DB_HOST:localhost}:1433;databaseName=clients;encrypt=false;sendStringParametersAsUnicode=true
+client.datasource.username=sa
+client.datasource.password=verYs3cret
+client.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+client.datasource.maximum-pool-size=10
+client.datasource.minimum-idle=2
+client.datasource.connection-timeout=30000
+client.datasource.max-lifetime=1800000
+client.datasource.idle-timeout=600000
+client.datasource.pool-name=ClientPool
+
+#client.jpa.hibernate.hbm2ddl.auto: update
+client.jpa.hibernate.hbm2ddl.auto=update
+#client.jpa.hibernate.ddl-auto=create-only
+client.jpa.hibernate.show-sql=true
+client.jpa.hibernate.format_sql=true
 
 # JPA / Hibernate (dev convenience - creates schema)
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
 # Initialize SQL using Spring's sql init if you add schema.sql/data.sql files
 spring.sql.init.mode=never
 
 server.port=8083
 
-spring.jpa.transaction-type=RESOURCE_LOCAL
-spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
+#spring.jpa.transaction-type=RESOURCE_LOCAL
+#spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
 
 #spring.jpa.properties.hibernate.transaction.jta.platform=com.atomikos.icatch.jta.hibernate5.AtomikosJtaPlatform
 #org.springframework.boot:spring-boot-starter-jta-atomikos
@@ -35,15 +57,15 @@ spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.tr
 spring.jpa.open-in-view=false
 
 # CRITICAL for GraalVM native images
-spring.jpa.properties.hibernate.bytecode.provider=none
-spring.jpa.properties.hibernate.bytecode.enhancer.enable-dirty-tracking=false
-spring.jpa.properties.hibernate.bytecode.enhancer.enable-lazy-initialization=false
-spring.jpa.properties.hibernate.bytecode.enhancer.enable-association-management=false
+#spring.jpa.properties.hibernate.bytecode.provider=none
+#spring.jpa.properties.hibernate.bytecode.enhancer.enable-dirty-tracking=false
+#spring.jpa.properties.hibernate.bytecode.enhancer.enable-lazy-initialization=false
+#spring.jpa.properties.hibernate.bytecode.enhancer.enable-association-management=false
 
 # Alternative: Use no enhancement at all
-spring.jpa.properties.hibernate.enhancer.enableDirtyTracking=false
-spring.jpa.properties.hibernate.enhancer.enableLazyInitialization=false
-spring.jpa.properties.hibernate.enhancer.enableAssociationManagement=falsee
+#spring.jpa.properties.hibernate.enhancer.enableDirtyTracking=false
+#spring.jpa.properties.hibernate.enhancer.enableLazyInitialization=false
+#spring.jpa.properties.hibernate.enhancer.enableAssociationManagement=falsee
 
 logging.level.org.hibernate=DEBUG
 logging.level.org.hibernate.bytecode=TRACE
