add dynamic demo

--- a/bytebuddy-troubleshoot/src/main/resources/application.properties
+++ b/bytebuddy-troubleshoot/src/main/resources/application.properties
@@ -72,3 +72,5 @@ logging.level.org.hibernate.bytecode=TRACE
 
 spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.session_factory.statement_inspector=prot.graalvm.tr.tools.DebugInterceptor
+
+app.conditional.service=AService
