--- a/bytebuddy-troubleshoot/pom.xml
+++ b/bytebuddy-troubleshoot/pom.xml
@@ -88,6 +88,7 @@
 						<buildArg>--no-fallback</buildArg>
 						<buildArgs>-H:+AddAllCharsets</buildArgs>
 						<buildArgs>-H:+IncludeAllLocales</buildArgs>
+						<buildArgs>-Dcity=Vancouver</buildArgs>
 					</buildArgs>
 				</configuration>
 			</plugin>
